# qsimavr

./: CMakeLists.txt
Display14Seg/: CMakeLists.txt  glcdfactory.cpp  glcdgui.cpp  glcdgui.h  glcdgui.ui  image_svg.qrc
QSimAVR/: pluginmanager.cpp
